# hunterAssassin

./: CMakeLists.txt
IA/: ArtificialIntelligence.cpp  ArtificialIntelligence.h  mainIA.cpp
map/: map.cpp  map.h
src/: Game.cpp  Game.h  Player.cpp  Player.h  Point.h  Rect.h  config_Variable.h  main.cpp  mainAnimation.cpp  mainProject.cpp  player.cpp  player.h  point.h
src/core/: Game.cpp  Game.h  IA.cpp  IA.h  Map.cpp  Map.h  Player.cpp  Player.h  config.h
src/sdl2/: SDLGame.cpp  SDLGame.h  mainProject.cpp
src/txt/: main_txt.cpp  txtJeu.cpp  winTxt.cpp
